2002-11-10  Christian Ruppert <arc@gmx.li>
	* uwm/handlers.c: now DeUltimizing windows that are reparented by
	  cliets since we usually don't need to further care about them.
	* uwm/windows.c (UltimizeWin): check added to avoid ultimizing root
	  window.
	* uwm/wingroups.c (UpdateWinGroup): explicitly checked and disabled
	  window groups with either the root window or None as group leader.

2002-10-13  Christian Ruppert <arc@gmx.li>
	* uwm/special.c, uwm/special.h: added MyStrdup function to replace
	  strdup (which doesn't exist on all systems and has no error treatment)
	* uwm/nodes.c, uwm/nodes.h: bugfix changed name of melfunc to gelfunc to
	  be consistent with tree.h

2002-09-12  Christian Ruppert <arc@gmx.li>
	* uwm/special.c: corrected default for CPPcall to "cpp" (quotes missing)
	* uwm/special.c: changed #include "time.h" to #include <time.h>

2002-09-12  Christian Ruppert <arc@gmx.li>
	* uwm/Makefile.am: added uwm/tree.c to the list .c-files and uwm/tree.h
	  to the list of non installed headers.
	* uwm/tree.c, uwm/tree.h: added a simple module to create and search in
	  binary balanced trees for use with keyboard configurability.

2002-09-12  Christian Ruppert <arc@gmx.li>
	* uwm/nodes.c, uwm/nodes.h: added SortList(NodeList *list, melfunc mel)
	  function.
	* uwm/nodes.c, uwm/nodes.h: removed actual pointer from node lists which
	  was not used anyway.

2002-09-04  Christian Ruppert <arc@gmx.li>
	* uwm/init.c: added grabbing of UWM_MODIFIERS/End which must either
	  have been forgotten when keyboard stuff was implemented or gotten
	  accidentally deleted sometime.

2002-09-03  Christian Ruppert <arc@gmx.li>
	* uwm/Makefile.am: added define UDE_BIN_PATH for more reliable.
	  restart.
	* uwm/uwmmenu.c: added call for UDE_BIN_PATH/uwm in restart procedure.

2002-06-21  Christian Ruppert <arc@gmx.li>
	* uwm/uwm.c (main), uwm/init.c (InitUWM): moved CheckCPP from InitUWM
	  to main so that it is called before we install SIGCHILD handler.
